@@ -34,6 +34,8 @@ enum
   MTYPE_LINK_NODE,
   MTYPE_THREAD,
   MTYPE_THREAD_MASTER,
+  MTYPE_THREAD_STATS,
+  MTYPE_THREAD_FUNCNAME,
   MTYPE_VTY,
   MTYPE_VTY_HIST,
   MTYPE_VTY_OUT_BUF,
