@@ -4,6 +4,9 @@
 	  (vty_serv_un) remove flags.
 	  (vtysh_accept) close socket if we cant set NONBLOCK. Add flags.
 	* keychain.c: Convert some more strtoul users to VTY_GET_INTEGER.
+	* memory.h: Add MTYPE_THREAD_FUNCNAME and MTYPE_THREAD_STATS
+	* thread.c: Update stats and funcname alloc/free to use previous
+	  specific memory type defines
 
 2004-10-29 Paul Jakma <paul@dishone.st>
 
